objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>LLC_BI__Treasury Management Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is required and specifies the Relationship/Account associated with the Lead. It is utilized in the Convert to Product Package operation.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field references the financial institution&apos;s Lead associated branch location. It is optional and manually populated.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CurrentGenerators__c</fullName>
        <description>This field is currently not being used.</description>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Email_Opt_In__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field specifies if the Lead&apos;s contact is opted in for email communication. It is optional and manually populated.</description>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest__c</fullName>
        <description>This picklist field is an example of a custom multi-select picklist.</description>
        <inlineHelpText>This is an example of a custom multi-select picklist where you can select multiple options.</inlineHelpText>
        <label>Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product 1</fullName>
                </value>
                <value>
                    <fullName>Product 2</fullName>
                </value>
                <value>
                    <fullName>Product 3</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Detail__c</fullName>
        <description>This field is optional. It is manually populated. This field allows users to enter additional details about a lead.</description>
        <label>Lead Detail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Priority__c</fullName>
        <description>This field specifies the priority of the financial institution&apos;s Lead. It is optional and manually populated.</description>
        <label>Lead Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                    <default>true</default>
                    <label>Warm</label>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Specifics__c</fullName>
        <description>This field is optional. It is manually populated. It is typically used as a dependent picklist on the Lead Source field to provide additional details.</description>
        <label>Lead Specifics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Status_Detail__c</fullName>
        <description>This field is optional. It is manually populated. This field allows users to enter additional details about the current status of a lead.</description>
        <label>Lead Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Amount__c</fullName>
        <description>This field shows the amount of the opportunity and whether it is a loan, deposit, etc. It is optional and manually populated.</description>
        <inlineHelpText>The amount of the opportunity, whether it&apos;s a loan, deposit, etc.</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Type__c</fullName>
        <description>This picklist specifies the Lead&apos;s loan type. It is optional and manually populated</description>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Start-up</fullName>
                </value>
                <value>
                    <fullName>Startup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is auto-populated as a look up to a loan created when Convert to nCino is selected on the lead. This allows the financial institution and the BI tool to track converted leads</description>
        <label>Converted Lead</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Converted Lead</relationshipLabel>
        <relationshipName>ConvertedLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mobile_Phone__c</fullName>
        <description>This field captures the phone number of the lead&apos;s associated contact. It is optional and manually populated.</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NumberofLocations__c</fullName>
        <description>This field tracks how many business locations the lead&apos;s associated customer may have. It is optional and manually populated.</description>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary__c</fullName>
        <description>This field is currently not being used.</description>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__ProductInterest__c</fullName>
        <description>This field is currently not being used.</description>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This reference field looks up the Product Line of the Lead&apos;s specific product. It is a required field, as the Product Line drives the product type options. It is manually populated.</description>
        <label>Product Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__Product_Line__c.LLC_BI__Non_Global_Product_Type_Count__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product_Line__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <description>The required picklist field is manually populated and specifies the Product Line. The options available for the Product Type and Product selections are dependent on this field.</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Card</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                    <default>true</default>
                    <label>Commercial</label>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Leasing and Finance</fullName>
                </value>
                <value>
                    <fullName>Personal Card</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is a system generated field and specifies the Product Package the lead was converted to. The field is populated after the Convert to Product Package process is executed. The field is visible to users</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is required and is used to look up the Lead’s specific Product. The options available for the Product selections are dependent on the Product Line and Product Type fields. It is required and manually populated.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.LLC_BI__Product_Type_Reference__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.LLC_BI__Product_Line_Reference__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__r.LLC_BI__Product_Line__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is required and is used to look up the Lead’s specific Product Type. The options available for the Product Type are dependent on the Product Line and Product Line fields. It is required and manually populated.</description>
        <label>Product Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.LLC_BI__Product_Line_Reference__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product_Type__c.LLC_BI__Product_Line__c</valueField>
            </filterItems>
            <filterItems>
                <field>LLC_BI__Product_Type__c.LLC_BI__Usage_Type__c</field>
                <operation>notContain</operation>
                <value>Global</value>
            </filterItems>
            <filterItems>
                <field>LLC_BI__Product_Type__c.LLC_BI__Product_Count__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>The required picklist field is manually populated and specifies the Product Type. The options for this field are dependent on the Product Line field. The options available for the Product selections are dependent on this field.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Non-Real Estate</fullName>
                    <default>true</default>
                    <label>Non-Real Estate</label>
                </value>
                <value>
                    <fullName>Unsecured</fullName>
                </value>
                <value>
                    <fullName>Consumer - HELOC</fullName>
                </value>
                <value>
                    <fullName>Consumer - Vehicle</fullName>
                </value>
                <value>
                    <fullName>Consumer - Unsecured Term</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Startup</fullName>
                </value>
                <value>
                    <fullName>Consumer - Unsecured LOC</fullName>
                </value>
                <value>
                    <fullName>Consumer - Recreational Vehicle</fullName>
                </value>
                <value>
                    <fullName>Business Rewards</fullName>
                </value>
                <value>
                    <fullName>Personal Rewards</fullName>
                </value>
                <value>
                    <fullName>Business No Rewards</fullName>
                </value>
                <value>
                    <fullName>Personal No Rewards</fullName>
                </value>
                <value>
                    <fullName>Consumer - Mortgage</fullName>
                </value>
                <value>
                    <fullName>Leasing and Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>The required picklist field is manually populated and specifies the Product. The options for this field are dependent on the Product Line and Product Type field.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts Receivables</fullName>
                    <default>true</default>
                    <label>Accounts Receivables</label>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>Balloon</fullName>
                </value>
                <value>
                    <fullName>Balloon Special</fullName>
                </value>
                <value>
                    <fullName>Business &amp; Real Estate</fullName>
                </value>
                <value>
                    <fullName>Business Only</fullName>
                </value>
                <value>
                    <fullName>Capital Finance Lease</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Crops</fullName>
                </value>
                <value>
                    <fullName>DBO Lease</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Fair Market Value Lease</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Ground-Up Real Estate</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Land Development</fullName>
                </value>
                <value>
                    <fullName>Lease-Hold</fullName>
                </value>
                <value>
                    <fullName>Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Marine Purchase</fullName>
                </value>
                <value>
                    <fullName>Marine Refinance</fullName>
                </value>
                <value>
                    <fullName>New Customer Promotion</fullName>
                </value>
                <value>
                    <fullName>Operating Lease</fullName>
                </value>
                <value>
                    <fullName>Partial Buyout</fullName>
                </value>
                <value>
                    <fullName>Platinum Rewards</fullName>
                </value>
                <value>
                    <fullName>Premium Plus Bonus</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Purchase New</fullName>
                </value>
                <value>
                    <fullName>Purchase Primary/Vacation Residence</fullName>
                </value>
                <value>
                    <fullName>Purchase Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Referred_To__c</fullName>
        <description>This picklist specifies whether the lead was referred to another financial institution, another branch or maybe another department. It can be controlled by the financial institution. It is optional and manually populated.</description>
        <label>Referred To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BofA</fullName>
                </value>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Revenue__c</fullName>
        <description>This field is optional and specifies the Lead&apos;s potential revenue amount. It is manually populated.</description>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SICCode__c</fullName>
        <description>This field is optional and specifies the Standard Industrial Classification (SIC) code for the Lead’s associated industry. SIC is a system for classifying industries by a four-digit code. The field is manually populated.</description>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Queue_Date__c</fullName>
        <inlineHelpText>The date/time the lead entered the queue</inlineHelpText>
        <label>Queue Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to add multiple leads</description>
        <label>Related Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Lead</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>InternationalLeads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>International Leads</label>
        <queue>InternationalLeads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Leads_this_Month</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Mktg: Uncoverted Leads this Month</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__My_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Long Term</value>
        </filters>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Pharmacy_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <columns>LLC_BI__Lead_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.INDUSTRY</field>
            <operation>equals</operation>
            <value>Pharmacy</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Long Term</value>
        </filters>
        <label>Pharmacy Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Recent_Leads_All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <label>Recent Leads - All</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Website_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Underwood</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Website Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>USLeads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>US Leads</label>
        <queue>USLeads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>LLC_BI__Loan</fullName>
        <active>true</active>
        <businessProcess>LLC_BI__Treasury Management Lead</businessProcess>
        <description>Select for a New Loan Opportunity</description>
        <label>Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Treasury_Management</fullName>
        <active>true</active>
        <businessProcess>LLC_BI__Treasury Management Lead</businessProcess>
        <description>Select for a New Treasury Management Opportunity</description>
        <label>Treasury Management</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>